@@ -1,3 +1,3 @@
-otf2              https://silc.zih.tu-dresden.de/svn/otf2-root/branches/RB-1.3
-opari2            https://silc.zih.tu-dresden.de/svn/opari2-root/trunk
-common            https://silc.zih.tu-dresden.de/svn/common-root/trunk
+otf2              https://silc.zih.tu-dresden.de/svn/otf2-root/branches/silc-incubation
+opari2            https://silc.zih.tu-dresden.de/svn/opari2-root/branches/silc-incubation
+common            https://silc.zih.tu-dresden.de/svn/common-root/branches/silc-incubation
